# dynamic-heap-c

./: CMakeLists.txt  README.md  build_script.sh  main.c
include/: custom_malloc.h  custom_sbrk.h
src/: custom_malloc.c  custom_sbrk.c
